--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 data:
-  images_path: "/media/steve/Seagate Portable Drive/datasets/coco/train2014"
-  annotations_file: "/media/steve/Seagate Portable Drive/datasets/coco/annotations/instances_train2014.json"
+  images_path: D:\Tictag\owl-vit-object-detection\data\train2014\train2014
+  annotations_file: D:\Tictag\owl-vit-object-detection\data\annotations_trainval2014\annotations\instances_train2014.json
   num_train_images: 2500 # Keep high enough to ensure that at least one of each label is seen in training. 2500 is a good minimum
   num_test_images: 100
 
